--- a/admobadapter/src/main/res/values/strings.xml
+++ b/admobadapter/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">admobadapter</string>
     <string name="test_admob_unit_id">ca-app-pub-3940256099942544/3986624511</string>
     <string name="test_admob_express_unit_id">ca-app-pub-3940256099942544/1072772517</string>
+    <string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
 </resources>
