1. add to sampleapp a call of the MobileAds.initialize for instance 2. adexpresslistview_item.xml was removed 3. 2 new methods were added to Express Adapter wrappers: setAdsUnitId() and setAdSize() to set express ads' parameters from code.

--- a/sampleapp/src/main/res/values/strings.xml
+++ b/sampleapp/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">admobadapter-sampleapp</string>
     <string name="banner_admob_unit_id">ca-app-pub-xxx/xxx</string>
     <string name="testDeviceID">6BA3752AF66F8D8553248A71886E648D</string>
+    <string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="test_admob_express_unit_id">ca-app-pub-3940256099942544/1072772517</string>
 </resources>
